
0.9.11b Feb 14, 2006
 * improved version comparison, falling back on strverscmp rather than strcasecmp.
 * Polish translation updates from Piotr
 * moved previously hardcoded string "Excluding %s, use --ignore-dep to override\n" into translations
 * updated Vietnamese translation from Vu
 * fixed Indonesian translation

0.9.11a Dec 31, 2005
 * updated Bulgarian translation
 * fixed escape character bug (Dan Barber)
 * now preserves access and modification time of downloaded package
 * added Indonesian translation by Kemas Antonius
 * updated Portuguese_Portugal translation from Miguel
 * updated Polish translation from Piotr

0.9.11 Dec 2, 2005
 * added slapt_clean_description() to remove the package name from the
   package description.
 * try to install/upgrade essential packages first
   (glibc-solibs, sed, pkgtools) for dist-upgrade
 * Bulgarian translation by Victor Keranov
 * updated formatting of statistics when --show-stats|-S is in use
 * updated Russian and Unkrainian translations
 * made --install-set ignore excluded packages
 * added --prompt|-p option to always prompt (Kanedaaa)

0.9.10e Oct 14, 2005
 * removed duplicate slapt_add_exclude_to_transaction() calls
 * fixed hardcoded mirror setting in PACKAGES.TXT regression
 * updated Portuguese_Portugal translation from Miguel

0.9.10d Oct 02, 2005
 * added slapt_remove_exclude() to compliment slapt_add_exclude()
 * changed slapt_init_regex() to return slapt_regex_t *
 * changed slapt_init_transaction() to return slapt_transaction_t *
 * added libslapt.3 manpage
 * added reference to Stefano Stabellini's PACKAGES.TXT with dependency
   information to FAQ #10.
 * introduced --install-set option to install whole disk sets
 * fixed naming of data cache file for uncompressed PACKAGES.TXT
 * updated the package data download to save on disk i/o
 * created a doc/ directory for the man pages
 * added Russian and Unkrainian translations (and man pages) by sin of the DeepStyle team
 * updated files for 10.2