@@ -1,5 +1,6 @@
 
 0.9.11b Feb 14, 2006
+ * merged patch from Piotr for --config|-c and --download-only|-d shortcuts
  * improved version comparison, falling back on strverscmp rather than strcasecmp.
  * Polish translation updates from Piotr
  * moved previously hardcoded string "Excluding %s, use --ignore-dep to override\n" into translations
